--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,19 @@
     android:layout_height="match_parent"
     tools:context="com.demo.tomcat.fragmentdemo.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <fragment
+        android:id="@+id/fragment1"
+        android:name="android.preference.PreferenceFragment"
+        android:layout_width="381dp"
+        android:layout_height="400dp"
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="195dp" />
 
+    <fragment
+        android:id="@+id/fragment2"
+        android:name="android.preference.PreferenceFragment"
+        android:layout_width="381dp"
+        android:layout_height="398dp"
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="195dp" />
 </android.support.constraint.ConstraintLayout>
